<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/mainSectionButton"
        android:layout_width="229dp"
        android:layout_height="75dp"
        android:text="@string/mainSectionButton"
        android:backgroundTint="@color/pink_pale_02"
        android:contentDescription="@string/saveOptionButton"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <Button
        android:id="@+id/priceSectionButton"
        android:layout_width="229dp"
        android:layout_height="75dp"
        android:text="@string/priceSectionButton"
        android:backgroundTint="@color/pink_pale_02"
        android:contentDescription="@string/saveOptionButton"
        android:textColor="@color/white"
        android:textSize="18sp" />
</LinearLayout>