<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/pink_pale">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="200dp"
            android:background="@color/material_dynamic_tertiary90"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="303dp"
                android:layout_height="match_parent"
                android:background="@color/material_dynamic_tertiary90"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nameID"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:text="@string/name"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:paddingLeft="20dp"
                    tools:text="Name: "/>

                <TextView
                    android:id="@+id/imageId"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:text="@string/image"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="Image: "/>

                <TextView
                    android:id="@+id/categoryItemID"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:text="@string/category"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="Category: "/>

                <TextView
                    android:id="@+id/descriptionID"
                    android:layout_width="144dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="Description: "/>

                <TextView
                    android:id="@+id/unitID"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:text="@string/units"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="Units: "/>

                <TextView
                    android:id="@+id/priceID"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:text="@string/price"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    tools:text="Price: "/>

                <Button
                    android:id="@+id/deleteButton"
                    android:layout_marginStart="10dp"
                    android:layout_width="90dp"
                    android:layout_height="50dp"
                    android:contentDescription="@string/deleteButton"
                    android:text="@string/deleteItemButton"
                    android:backgroundTint="@color/pink_pale_02"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>